--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Check out repository code 🛎️
         uses: actions/checkout@v4
 
+      - name: build project
+        run: npm run build
+
       - name: Delete prev container
         run: docker rm -f ${{ github.event.repository.name }}
         continue-on-error: true
