--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,10 +17,13 @@ jobs:
       - name: Check out repository code 🛎️
         uses: actions/checkout@v4
 
-      - name: build project
-        run: |
-          npm ci
-          npm run build
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - run: npm ci
+      - run: npm run build
 
       - name: Delete prev container
         run: docker rm -f ${{ github.event.repository.name }}
