--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,7 +25,10 @@ jobs:
         continue-on-error: true
 
       - name: Build Docker image
-        run: docker build -t ${{ github.event.repository.name }} .
+        run: docker compose build
 
-      - name: Run Docker container
-        run: docker run --net shopnetwork -e URL_PREFIX=http://172.24.0.12:8189/app --ip 172.24.0.13 --name ${{ github.event.repository.name }} -p 3000:3000 ${{ github.event.repository.name }}:latest
+      # - name: Build Docker image
+      #   run: docker build -t ${{ github.event.repository.name }} .
+
+      # - name: Run Docker container
+      #   run: docker run --net shopnetwork -e URL_PREFIX=http://172.24.0.12:8189/app --ip 172.24.0.13 --name ${{ github.event.repository.name }} -p 3000:3000 ${{ github.event.repository.name }}:latest
