--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Check out repository code 🛎️
         uses: actions/checkout@v4
 
-      - name: Use Node.js
-        run: npm ci
+      # - name: Use Node.js
+      #   run: npm ci
 
       - name: Delete prev container
         run: docker rm -f ${{ github.event.repository.name }}
@@ -24,11 +24,11 @@ jobs:
         run: docker rmi ${{ github.event.repository.name }}
         continue-on-error: true
 
-      - name: build project
-        run: npm run build
+      # - name: build project
+      #   run: npm run build
 
-      # - name: Build Docker image
-      #   run: docker compose build
+      - name: Build Docker image
+        run: docker-compose up --build
 
       # - name: Build Docker image
       #   run: docker build -t ${{ github.event.repository.name }} .
