--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,15 @@
 version: '3.9'
 
+networks:
+  shopnetwork:
+    name: shopnetwork
+    external: true
+
 services:
   frontend:
+    networks:
+      - shopnetwork
     build: .
     container_name: github-actions-nextjs
     ports:
       - "3000:3000"
-    networks:
-      - shopnetwork
-
-networks:
-  shopnetwork:
-    external: true
