--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,26 +16,26 @@ jobs:
       # - name: Use Node.js
       #   run: npm ci
 
-      # - name: Delete prev container
-      #   run: docker rm -f ${{ github.event.repository.name }}
-      #   continue-on-error: true
-
-      # - name: Delete prev image
-      #   run: docker rmi ${{ github.event.repository.name }}
-      #   continue-on-error: true
+      - name: Delete prev container
+        run: docker rm -f ${{ github.event.repository.name }}
+        continue-on-error: true
 
       - name: Delete prev image
-        run: docker compose down
+        run: docker rmi ${{ github.event.repository.name }}
         continue-on-error: true
+
+      # - name: Delete prev image
+      #   run: docker compose down
+      #   continue-on-error: true
 
       # - name: build project
       #   run: npm run build
 
-      - name: Build Docker image
-        run: docker compose build
-
       # - name: Build Docker image
-      #   run: docker build -t ${{ github.event.repository.name }} .
+      #   run: docker compose build
+
+      - name: Build Docker image
+        run: docker build --network shopnetwork -t ${{ github.event.repository.name }} .
 
       # - name: Run Docker container
       #   run: docker run --net shopnetwork -e URL_PREFIX=http://172.24.0.12:8189/app --ip 172.24.0.13 --name ${{ github.event.repository.name }} -p 3000:3000 ${{ github.event.repository.name }}:latest
