--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,7 +35,7 @@ jobs:
       #   run: docker compose build
 
       - name: Build Docker image
-        run: docker buildx build --push --network shopnetwork -t ${{ github.event.repository.name }}:latest .
+        run: docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 --load --network shopnetwork -t ${{ github.event.repository.name }}:latest .
 
       - name: Run Docker container
         run: docker run --net shopnetwork -e URL_PREFIX=http://172.24.0.12:8189/app --ip 172.24.0.13 --name ${{ github.event.repository.name }} -p 3000:3000 ${{ github.event.repository.name }}:latest
