--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   frontend:
     build:
       context: .
-      network: shopnetwork
+      network: host
     container_name: github-actions-nextjs
     ports:
       - "3000:3000"
@@ -15,3 +15,4 @@ networks:
   shopnetwork:
     name: shopnetwork
     external: true
+    driver: bridge
