--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   frontend:
     build:
       context: .
-      network: host
+      network: shopnetwork
     container_name: github-actions-nextjs
     ports:
       - "3000:3000"
