--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,7 +35,7 @@ jobs:
       #   run: docker compose up --build -d
 
       - name: Build Docker image
-        run: docker buildx build --platform linux/amd64,linux/arm64 --load --network shopnetwork -t ${{ github.event.repository.name }}:latest .
+        run: docker buildx build --platform linux/arm64,linux/amd64 --push 127.0.0.1:3128/${{ github.event.repository.name }}:latest --network shopnetwork  .
 
       - name: Run Docker container
         run: docker run --net shopnetwork -e URL_PREFIX=http://172.24.0.12:8189/app --ip 172.24.0.13 --name ${{ github.event.repository.name }} -p 3000:3000 ${{ github.event.repository.name }}:latest
